--- a/CKK.UI/CKK.UI.csproj
+++ b/CKK.UI/CKK.UI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CKK.Logic\CKK.Logic.csproj" />
+    <ProjectReference Include="..\CKK.Persistance\CKK.Persistance.csproj" />
   </ItemGroup>
 
   <ItemGroup>
